# eth_crawler

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.sample  Dockerfile  pyproject.toml
backend/app/: alchemy_payloads.py  cache.py  main.py  tokens.py  utils.py
frontend/: .env.sample  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx  router.jsx
frontend/src/components/: TransactionsTable.jsx
frontend/src/constants/: api.js
frontend/src/pages/: Home.jsx  Transactions.jsx
frontend/src/utils/: BackendPayloads.js  BackendPayloads.ts
