[project]
name = "eth_crawler"
version = "0.1.0"
description = "Tracelabs tech assestment"
authors = [
    { name = "Juan Villarejo", email = "jbtwist92@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "ruff>=0.14.0",
]

[tool.ruff]
line-length = 79
target-version = "py314"
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "I",    # isort
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    ".git",
]
fix = true